# path-manager

./: Cargo.toml  README.md
src/: cli.rs  config_path.rs  main.rs  paths.rs  tmux.rs
src/search_tui/: event_handler.rs  mod.rs  tui_state.rs  tui_ui.rs
