[package]
name = "path-manager"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
crossterm = "0.26.1"
serde = {version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tui = "0.19.0"

[[bin]]
name = "path-manager"
path = "src/main.rs"
